<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_key_24"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_gallery"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_slideshow"
            />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/report"
            android:title="@string/menu_test"
            />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/baseline_admin_panel_settings_24"
            android:title="Admin"
            />
    </group>
</menu>